@@ -1,3 +1,7 @@
+21/11/2012 OsiCpx
+  - calling setWarmStart with a too small basis now disables the use of an
+    advanced basis for the next LP solve
+
 20/11/2012 OsiGlpk, OsiCpx
   - workaround problem in Glpk with empty problem name (patch by Bertrand Le Cun)
   - not using CPXsolninfo for MIPs with CPLEX < 11.0 anymore
